--- a/glossary.html.md.erb
+++ b/glossary.html.md.erb
@@ -8,12 +8,12 @@ Reading through this glossary should help you quickly become comfortable working
 
 | Term          | Definition   |
 | ------------- | ------------ |
-| Agent         | A process that runs continuously in VMs deployed by BOSH. The BOSH Agent executes tasks in response to messages it receives from the BOSH Director. |
+| <a id="agent"></a>Agent         | A process that runs continuously in VMs deployed by BOSH. The BOSH Agent executes tasks in response to messages it receives from the BOSH Director. |
 | Blobstore     | A repository where BOSH stores binary content at various times during the lifecycle of a BOSH release.|
 | CPI | A Cloud Provider Interface is a software layer between BOSH and an IaaS (cloud). |
 | Deploy        | BOSH deploys software to the cloud using a manifest, a stemcell, and a release. This sense of the verb "deploy" is unique to BOSH.|
 | Deployment    | An encapsulation of software and configuration that can be deployed to the cloud by BOSH. A BOSH deployment is a "thing" that can be replicated. Even though BOSH creates the deployment using ephemeral resources, the deployment is stable in that BOSH re-creates VMs that fail and otherwise works to keep your software running. A BOSH deployment is portable across different kinds of infrastructure (that is, across different CPIs). |
-| Director | The BOSH component that coordinates the BOSH Agents and responds to user requests and system events. The BOSH Director is the orchestrator of a BOSH deployment. |
+| <a id="director"></a>Director | The BOSH component that coordinates the BOSH Agents and responds to user requests and system events. The BOSH Director is the orchestrator of a BOSH deployment. |
 | Job | An aggregation of multiple tasks. Each major area of functionality for a given release usually maps to a single job. For example, a database server within a release could map to a BOSH job. There are multiple jobs in a release. This sense of the noun "job" is unique to BOSH.|
 | Jumpbox | A VM that acts as a single access point for the VMs in a BOSH deployment. Allowing access through a jumpbox and disabling access to the other VMs is a common security measure. |
 | Manifest | A YAML file that identifies a release and a stemcell and specifies how to configure them for a given deployment. |
