--- a/create-manifest.html.md.erb
+++ b/create-manifest.html.md.erb
@@ -9,7 +9,7 @@ Now you need to decide the orchestration and configuration of the deployment,
 and to express your decisions in a form that BOSH can consume: namely, a deployment manifest.
 This topic explains how manifests work and how to create them.
 
-## <a id="orchestrate"></a> Specifying the Orchestration of your Deployment ##
+## <a id="orchestrate"></a> Specifying Orchestration ##
 
 Suppose the product you want to deploy can do five things: call these capabilities Feature A through Feature D.
 You want your deployment to take advantage of all five features, but you don't want any one VM to be responsible for more than two features.
