edit first para

--- a/create-manifest.html.md.erb
+++ b/create-manifest.html.md.erb
@@ -3,9 +3,9 @@ title: Create a Manifest
 ---
 
 When you discover a distributed software product that you want to deploy to the cloud using BOSH,
-you download a BOSH release of the product.
-You then locate a stemcell that is appropriate for your preferred combination of VM and IaaS.
-Now you need to decide the orchestration and configuration of the deployment,
+you download a BOSH release of the product and locate a stemcell appropriate for your preferred combination of VM and IaaS.
+
+Next, you need to decide how to orchestrate and configure the deployment,
 and to express your decisions in a form that BOSH can consume: namely, a deployment manifest.
 This topic explains how manifests work and how to create them.
 
