--- a/create-manifest.html.md.erb
+++ b/create-manifest.html.md.erb
@@ -36,7 +36,7 @@ You name your VM types as "jobs" and specify a number of instances for each.
 
 In the illustration below, five features found in a release are allocated to VM types in a manifest.
 
- <%= image_tag("orchestrate.png") %>
+ <%= image_tag("orchestrate_sm.png") %>
 
 For example, the manifest fragment below shows two VM types, each of which supports two features.
 
