remove a few ords

--- a/create-manifest.html.md.erb
+++ b/create-manifest.html.md.erb
@@ -38,7 +38,7 @@ In the illustration below, five features found in a release are allocated to VM 
 
  <%= image_tag("orchestrate_sm.png") %>
 
-For example, the manifest fragment below shows two VM types, each of which supports two features.
+The manifest fragment below shows two VM types, each of which supports two features.
 
 <pre class="terminal">
 jobs:
