refine examples again

--- a/create-manifest.html.md.erb
+++ b/create-manifest.html.md.erb
@@ -37,10 +37,7 @@ and the term "template" to describe a feature.
 When you allocate a feature to a VM type, the feature described as a "job" in the release becomes a "template" in the `jobs` block in the manifest.
 You name your VM types as "jobs" and specify a number of instances for each.
 
-In the illustration below, five features in a release are allocated to VM types in a manifest:
-
-* The release lists the features as "jobs".
-* The manifest lists the features as "templates" that belong to VM types which are called "jobs."
+In the illustration below, five features in a release are allocated to VM types in a manifest.
 
  <%= image_tag("orchestrate_sm_3.png") %>
 
