remove line break

--- a/create-manifest.html.md.erb
+++ b/create-manifest.html.md.erb
@@ -308,9 +308,7 @@ This block is IaaS-dependent.
 
 ## <a id="creating"></a> How to Create a Manifest ##
 
-You can modify example manifests to suit your purposes.
-
-Another approach is to use a tool like [spiff](https://github.com/cloudfoundry-incubator/spiff) to create a manifest.
+You can modify example manifests to suit your purposes. Another approach is to use a tool like [spiff](https://github.com/cloudfoundry-incubator/spiff) to create a manifest.
 
 
 
