--- a/create-manifest.html.md.erb
+++ b/create-manifest.html.md.erb
@@ -1,5 +1,5 @@
 ---
-title: Create a Manifest
+title: Creating a Manifest
 ---
 
 When you discover a distributed software product that you want to deploy using BOSH,
