fix title and index

--- a/create-manifest.html.md.erb
+++ b/create-manifest.html.md.erb
@@ -1,5 +1,5 @@
 ---
-title: Creating a Manifest
+title: Creating a BOSH Deployment Manifest
 ---
 
 When you discover a distributed software product that you want to deploy using BOSH,
