--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -4,6 +4,7 @@ title: BOSH
 
 * [Glossary](glossary.html)
 * [What BOSH is and Why it's Different](what-bosh-is.html)
+* [Creating a BOSH Deployment Manifest](create-manifest.html)
 * [How BOSH Works](how-bosh-works.html)
 * [Local Setup](setup/index.html)
 * [Reference](reference/index.html)
