more on Lite and Micro

--- a/workflow.html.md.erb
+++ b/workflow.html.md.erb
@@ -16,7 +16,7 @@ Experimental and community-based methods also exist.
 [BOSH Lite] (https://github.com/cloudfoundry/bosh-lite) is software that runs within a single VM created with [Vagrant] (http://www.vagrantup.com/).
 Scripts packaged with BOSH Lite make it simple to deploy on a laptop or other local environment.
 In sum, BOSH Lite is a low-cost, low-risk development environment to test and experiment with BOSH.
-You do not need a release, a stemcell, or a manifest, only Vagrant and related files.
+To deploy BOSH Lite, you do not need a release, a stemcell, or a manifest, only Vagrant and related files.
 
 ### <a id="micro"></a> MicroBOSH  ###
 
